--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,9 @@ android {
     }
 }
 
+repositories {
+    mavenCentral()
+}
 
 
 dependencies {
@@ -30,6 +33,15 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:21.0.+'
     compile 'com.android.support:cardview-v7:21.0.+'
 
+
+    compile 'com.squareup.retrofit:retrofit:1.9.0'
+    compile 'com.netflix.rxjava:rxjava-core:0.20.4'
+    compile 'com.netflix.rxjava:rxjava-android:0.20.4'
+    compile 'com.squareup.okhttp:okhttp-urlconnection:2.0.0'
+    compile 'com.squareup.okhttp:okhttp:2.0.0'
+    compile 'commons-io:commons-io:2.4'
+    compile 'org.apache.httpcomponents:httpclient:4.3.4'
+    compile 'org.apache.httpcomponents:httpmime:4.3.4'
 
     compile 'com.getbase:floatingactionbutton:1.6.0'
     compile 'com.readystatesoftware.systembartint:systembartint:1.0.3'
