--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,7 +43,9 @@ dependencies {
     compile 'org.apache.httpcomponents:httpclient:4.3.4'
     compile 'org.apache.httpcomponents:httpmime:4.3.4'
 
+
     compile 'com.getbase:floatingactionbutton:1.6.0'
+    compile 'de.hdodenhof:circleimageview:1.2.1'
     compile 'com.readystatesoftware.systembartint:systembartint:1.0.3'
     compile 'com.github.traex.rippleeffect:library:1.2.2'
     compile 'fr.baloomba:viewpagerindicator:2.4.2'
