--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,13 +23,19 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"
             android:name=".drawer.MainActivity"
             android:label="@string/app_name" />
         <activity
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"
             android:name=".activities.LoginActivity"
             android:label="@string/title_activity_login" >
         </activity>
         <activity
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"
             android:name=".activities.SignUp"
             android:label="@string/title_activity_sign_up"
             android:parentActivityName=".activities.LoginActivity" >
@@ -38,6 +44,8 @@
                 android:value=".activities.LoginActivity" />
         </activity>
         <activity
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"
             android:name=".activities.DemoActivity"
             android:label="@string/title_activity_demo"
             android:parentActivityName=".drawer.MainActivity" >
@@ -52,6 +60,8 @@
                 android:value=".drawer.MainActivity" />
         </activity>
         <activity
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"
             android:name=".activities.EvidenceActivity"
             android:label="@string/title_activity_demo"
             android:parentActivityName=".drawer.MainActivity" >
@@ -68,6 +78,8 @@
             android:value="@string/google_maps_key" />
 
         <activity
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"
             android:name=".activities.MunicipalActivity"
             android:label="@string/title_activity_municipal" >
             <intent-filter>
