--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="la.opi.verificacionciudadana" >
+    package="la.opi.verificacionciudadana">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -21,50 +21,46 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+        >
         <activity
-            android:configChanges="orientation"
-            android:screenOrientation="portrait"
             android:name=".drawer.MainActivity"
-            android:label="@string/app_name" />
-        <activity
             android:configChanges="orientation"
-            android:screenOrientation="portrait"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" />
+        <activity
             android:name=".activities.LoginActivity"
-            android:label="@string/title_activity_login" >
-        </activity>
-        <activity
             android:configChanges="orientation"
-            android:screenOrientation="portrait"
+            android:label="@string/title_activity_login"
+            android:screenOrientation="portrait"/>
+        <activity
             android:name=".activities.SignUp"
+            android:configChanges="orientation"
             android:label="@string/title_activity_sign_up"
-            android:parentActivityName=".activities.LoginActivity" >
+            android:parentActivityName=".activities.LoginActivity"
+            android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".activities.LoginActivity" />
         </activity>
         <activity
+            android:name=".activities.TutorialActivity"
             android:configChanges="orientation"
-            android:screenOrientation="portrait"
-            android:name=".activities.DemoActivity"
             android:label="@string/title_activity_demo"
-            android:parentActivityName=".drawer.MainActivity" >
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
 
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".drawer.MainActivity" />
         </activity>
         <activity
-            android:configChanges="orientation"
-            android:screenOrientation="portrait"
             android:name=".activities.EvidenceActivity"
+            android:configChanges="orientation"
             android:label="@string/title_activity_demo"
-            android:parentActivityName=".drawer.MainActivity" >
+            android:parentActivityName=".drawer.MainActivity"
+            android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".drawer.MainActivity" />
@@ -78,15 +74,22 @@
             android:value="@string/google_maps_key" />
 
         <activity
-            android:configChanges="orientation"
-            android:screenOrientation="portrait"
             android:name=".activities.MunicipalActivity"
-            android:label="@string/title_activity_municipal" >
+            android:configChanges="orientation"
+            android:label="@string/title_activity_municipal"
+            android:screenOrientation="portrait">
             <intent-filter>
-                <action android:name=".activities.MunicipalActivity"/>
+                <action android:name=".activities.MunicipalActivity" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".activities.LoginScreenActivity"
+            android:configChanges="orientation"
+            android:label="@string/activity_login_screen_name"
+            android:screenOrientation="portrait"/>
+
     </application>
 
 </manifest>
