--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
         android:theme="@style/AppTheme"
         >
         <activity
-            android:name=".drawer.MainActivity"
+            android:name=".drawer.HomeMain"
             android:configChanges="orientation"
             android:label="@string/app_name"
             android:screenOrientation="portrait" />
@@ -46,7 +46,7 @@
         <activity
             android:name=".activities.TutorialActivity"
             android:configChanges="orientation"
-            android:label="@string/title_activity_demo"
+            android:label="@string/app_name"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -59,11 +59,11 @@
             android:name=".activities.EvidenceActivity"
             android:configChanges="orientation"
             android:label="@string/title_activity_demo"
-            android:parentActivityName=".drawer.MainActivity"
+            android:parentActivityName=".drawer.HomeMain"
             android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".drawer.MainActivity" />
+                android:value=".drawer.HomeMain" />
         </activity>
 
         <meta-data
