--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -102,6 +102,11 @@
             android:configChanges="orientation"
             android:screenOrientation="portrait" />
 
+        <activity
+            android:name=".activities.SettingsActivity"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait" />
+
 
     </application>
 
