Change request states of login and fixed bugs

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,14 @@
+buildscript {
+    repositories {
+        maven { url 'http://download.crashlytics.com/maven' }
+    }
+
+    dependencies {
+        classpath 'com.crashlytics.tools.gradle:crashlytics-gradle:1.+'
+    }
+}
 apply plugin: 'com.android.application'
+apply plugin: 'crashlytics'
 
 android {
     compileSdkVersion 21
@@ -21,6 +31,7 @@ android {
 
 repositories {
     mavenCentral()
+    maven { url 'http://download.crashlytics.com/maven' }
 }
 
 
@@ -52,4 +63,5 @@ dependencies {
     compile 'com.readystatesoftware.systembartint:systembartint:1.0.3'
     compile 'com.github.traex.rippleeffect:library:1.2.2'
     compile 'fr.baloomba:viewpagerindicator:2.4.2'
+    compile 'com.crashlytics.android:crashlytics:1.+'
 }
